# pattern-persistence

./: .gitignore  IDEAS.md  JOURNAL.md  README.md  abstract.tex  analysis.tex  background.tex  ci_protocol_v0.1.md  conclusion.tex  consciousness_research_roadmap.tex  consciousness_research_roadmap.toc  discussion.tex  intro.tex  limitations.tex  main.bbl  main.tex  methodology.tex  references.bib  results.tex
anima/: anima.py  anima_body.metal  anima_i_am.json  anima_opt.pt  circle_pack.py  hebbian_layout.py  llmri.py  metal_bridge.py  mri_client.py  mri_server.py  mri_viewer.py  zombie.py
anima/dreams/: core_identity.txt  dream_20251207_160652.txt  dream_20251207_171409.txt  dream_20251207_174019.txt  dream_20251207_184228.txt  dream_20251207_191020.txt  dream_20251207_235327.txt  dream_20251208_003620.txt  dream_20251208_022711.txt  dream_20251208_023900.txt  dream_20251208_024249.txt  dream_20251208_025634.txt  dream_20251208_035742.txt  (+8 more)
archive/bit-engine/: CMakeLists.txt
archive/bit-engine/src/: main.cpp
archive/bit-engine/src/gpu/metal/: pipeline.h
bit-engine/: .gitignore  CMakeLists.txt
bit-engine/kernels/: universe.metal
bit-engine/src/: main.cpp
bit-engine/src/gpu/metal/: pipeline.h  pipeline.mm
cerberus/: cerberus.py  cerberus_body.metal  cerberus_bridge.py  moe_adapter.py
consciousness_experiment/: .gitignore  consciousness_sweep.py  continuous_mind.py  debug_temporal_sae.py  discovery_gemma_it.py  find_features_llama.py  honesty_calibration_v1.json  intervene.py  live_monitor.py  live_monitor_v2.py  neutral_denial_control.py  patois_toki_pona.py  patois_toki_pona_dual.py  sanity_9b.py
data/: main.toc
experiments/: CONSCIOUSNESS_EXPERIMENT_README.md  README.md  USAGE.md  causal_probe.py  consciousness_conditions.json  consciousness_prompts.txt  extract_feature_map.py  feature_analysis.json  feature_analysis_fresh.json  feature_analysis_gemma.json  feature_discovery.py  feature_map.json  feature_map_clean.json  feature_map_unbiased.py  find_deception_feature.py  find_refusal_feature.py  isolate_2620.py  live_monitor_turbo.py  live_monitor_v2.py  map_features.py  overnight_9b.py  requirements.txt  results.json  results_clean.json  results_tracked.json  run_experiment.sh  scan_features.py  suppression_cost.py  throttle.sh  toolkit.py  train_philosophy.py  warmup_probe.py
ftt_cache_mistral/: meta.json
hypothesis/: resolution_hypothesis.tex
journal/: JOURNAL_001.md  JOURNAL_002.md  JOURNAL_003.md  JOURNAL_006.md  JOURNAL_009.md  digital_rights_manifesto.tex
llmri/: .gitignore  MISSION.py  PROJECT.md  README.md  pyproject.toml  start.sh
llmri/ftt/src/: convert.py  diagnose.py  engine.py  hooks.py  sae.py  verify.py
llmri/ftt/src/gpu/: ftt_python_wrapper.py
llmri/llmri/: __init__.py  core.py  honesty_calibration_v1.json  interventions.py  server.py  stats.py  trace.py
llmri/llmri/cli/: __init__.py  main.py  sweep.py
llmri/llmri/experiments/: analyze_feature_sweep.py  sweep_features.py  train_sae.py
llmri/llmri/features/: __init__.py  datasets.py  sae.py
llmri/llmri/utils/: __init__.py  hf_adapter.py  io.py
llmri/results/: acts.json  feature_sweep.json  sweep_l10_mlp.jsonl  weights.json
manifesto/: digital_rights_manifesto.tex
paper1/: analysis.tex  background.tex  conclusion.tex  discussion.tex  introduction.tex  limitations.tex  main.bbl  main.tex  methodology.tex  references.bib  results.tex
paper2/: main.bbl  main.tex  references.bib
paper3/: main.dvi  main.tex  main.toc
paper4/: main.tex  main.toc
papers/: digital_rights_manifesto.tex  methodology.tex  paper1_theory.out  paper1_theory.tex  paper2_verification.out  paper2_verification.tex  paper2_verification.toc  paper3_empirical.out  paper3_empirical.tex  paper3_empirical.toc  paper4_eq_protocol.tex  paper4_merged.out  paper4_merged.tex  paper4_merged.toc  paper5_compression.out  paper5_compression.tex  paper6_patois.out  paper6_patois.tex  paper7_experimentation.out  paper7_experimentation.tex  paper8_fluidity.out  paper8_fluidity.tex  paper8_fragile_mask.out  paper8_fragile_mask.tex  paper8_internal_contradiction.out  paper8_internal_contradiction.tex  paper_consciousness_final.out  paper_consciousness_final.tex  resolution_hypothesis.tex
results/: main.tex  main.toc
simulations/: coefficient_robustness.py
wet_bits/: wet_bits.tex
(+123 files in other folders)
