[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmri"
version = "0.1.0"
description = "LLM MRI / logic viewer: tools for inspecting LLM weights and activations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "James Couch" }
]

dependencies = [
  # Core stack; install torch separately according to your platform.
  "transformers>=4.44.0",
  "accelerate>=0.33.0",
  "datasets>=2.20.0",
  "typing-extensions>=4.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[project.scripts]
llmri = "llmri.cli.main:main"

[project.urls]
Homepage = "https://github.com/yourname/llmri"
Source = "https://github.com/yourname/llmri"

[tool.hatch.build.targets.wheel]
packages = ["llmri"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = false
